# fred-economic-compiler-feature-generator

./: .gitignore  README.md  config.yaml  pyproject.toml
keys/: README.md
src/fred_compiler/: __init__.py  config.py  fred_client.py  io_utils.py  key_manager.py  main.py  processing.py
